@@ -6,6 +6,7 @@ randomtorio-check-amount=Amount of tries
 randomtorio-log-seed-gap=Log the start of every n-th seed
 randomtorio-keep-on-looking=Look through all seeds
 randomtorio-normal-or-expensive=Sets all recipes to
+randomtorio-keep-icon-with-result=Icon stays with result
 randomtorio-display-costs=Log the cost of these items
 randomtorio-force-restriction=Restrict the ingredients of these items
 randomtorio-do-not-use=Prevent science packs from needing these
@@ -17,6 +18,7 @@ randomtorio-check-amount=This setting will limit the amount of times it tries to
 randomtorio-log-seed-gap=limits the log lines for seeds. And with less logs the mining goes faster and the log file stays smaller. (I do not need an other 70MB log file.)
 randomtorio-keep-on-looking=This will force the mod to go trough all the seeds you marked for trying. And will display all the seeds that would be completable and fall within the item requirements.
 randomtorio-normal-or-expensive=The game has 2 difficulty settings. I did not want to program around that so you can pick your choice in the startup and have that choice not matter anymore.
+randomtorio-keep-icon-with-result=While the results will swap places. The icons of those will swap with them.
 randomtorio-display-costs=Use the format of [color=#9999ff][item​=iron-plate][/color] to note the items you want. If typed correctly it should change into the item you are refering to.\n\nIn the log file, by default, the science packs get logged. All items in this list will get listed below the science packs in the log file. This allows for easy insight in the cost for these, since you might want a belt that is cheap.
 randomtorio-force-restriction=This bind all the logged items to the restriction of not being able to use the items below as base resource.
 randomtorio-do-not-use=Use the format of [color=#9999ff][item​=iron-plate][/color] to note the items you want. If typed correctly it should change into the item you are refering to.\n\nPrevents any and all science packs (by default, see setting above) from using these items as base resource. A base resource is all that is minable and collectiable in the world, for example; iron-ore, wood and raw-fish.
